--- a/resume.html
+++ b/resume.html
@@ -5,15 +5,15 @@
 <link rel="stylesheet" href="resume.css" />
 </head>
 <body>
-<p id="name"> Victor Chao <br/>
+<p id="name"> Victor Chao </p>
+<br/>
 <p id="email"> Chia-chi.Chao@tufts.edu </p>
-</p>
-<p>
+<br/>
 <p class="type"> &nbsp; EDUCATION </p>
 <p class="org">&nbsp;&nbsp;&nbsp; Tufts University School of Engineering </p>
 &nbsp;&nbsp;&nbsp;&nbsp; Bachelor of Science in Computer Science &amp; Economics in May 2016 <br/>
 &nbsp;&nbsp;&nbsp;&nbsp; Academic Standing: 3.41 Cumulative GPA, Dean&rsquo;s List standing <br/>
-</p>
+<br/>
 
 <p class="type"> &nbsp; RELEVANT COURSEWORK </p>
 <ul>
