--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h1>
-Victor Chao <br/>
+Victor Chao <br/> <br/>
 <img src="selfie.jpg" alt="Picture of Myself"/>
 </h1>
 <p id="links">
