--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
+                                <a href="mailto:chia-chi.chao@tufts.edu" class="btn btn-default btn-lg"><i class="fa fa-mail-forward fa-fw"></i> <span class="network-name">Email</span></a>
+                            </li>
+                            <li>
                                 <a href="https://github.com/cchao93" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                             <li>
@@ -129,7 +132,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Resume</h2>
-                    <p class="lead">Click <a target="_blank" href="http://www.psdcovers.com/">here</a> to view.</p>
+                    <p class="lead">Click <a target="_blank" href="files/resume.pdf">here</a> to view.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/formal.jpg" alt="formal picture of Victor">
@@ -153,6 +156,9 @@
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
+                        <li>
+                            <a href="mailto:chia-chi.chao@tufts.edu" class="btn btn-default btn-lg"><i class="fa fa-mail-forward fa-fw"></i> <span class="network-name">Email</span></a>
+                        </li>
                         <li>
                             <a href="https://github.com/cchao93" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
