updated about me & resume

--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">About</h2>
-                    <p class="lead">I am a computer science &amp; economics double major at Tufts University in Medford, MA, expecting to graduate in May 2016. I am currently seeking opportunities in software development, data science, and IT consulting. Most of my past projects and work experience involved web application development, but I have also done some work in OS-level development, distributed systems, networking, and more recently, machine learning. I look forward to exploring any of the above in the future.<br /><br />
-                    Outside of work and the classroom, I am an avid musician. Having played the piano since I was six, I went through formal classical training until eighth grade, when I stepped into the enchanting world of percussion. From pop to punk rock to jazz, I have been exposed to various genres and played in numerous bands. Born and raised in Taiwan, I also enjoy cultural exploration and travel.<br /><br />
+                    <p class="lead">Hi! My name is Victor. I am a computer science &amp; economics major at Tufts University, expecting to graduate in May 2016. Most of my past projects and work experience involved full-stack web development, but I am also passionate about system-level programming and data science.
+                    <br /><br />
+                    Outside of work and the classroom, I am an avid musician. Having played the piano since I was six, I went through classical training until eighth grade, when I stepped into the enchanting world of percussion. From pop to punk rock to jazz, I have been exposed to various genres and played in numerous bands. Born and raised in Taiwan, I also enjoy cultural exploration and travel.<br /><br />
                     If anything sounds interesting to you, feel free to <a href="#contact">get in touch</a> with me.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
